# pobsd-server

./: .gitignore  Cargo.toml  LICENSE  README.md
man/: pobsd-server.conf.5
src/: cmd.rs  fetcher.rs  lib.rs  main.rs  metacritic.rs  steam.rs  updater.rs  utils.rs
src/app/: config.rs  mod.rs  pagination.rs  representation.rs
src/db/: connector.rs  data.rs  mod.rs  requests.rs  responses.rs  stats.rs
src/handlers/: about.rs  assets.rs  errors.rs  game.rs  list.rs  mod.rs  rss.rs  stats.rs
src/igdb/: client.rs  token.rs
templates/: 404_no_game.html  404_no_games.html  500.html  about.html  base.html  game_details.html  game_list.html  news.html  stats_chart.html  stats_table.html
templates/game_list_partials/: game_in_list.html  pagination.html
templates/partials/: devs.html  engine.html  genres.html  navbar.html  publishers.html  runtime.html  status.html  tags.html  version.html
templates/stats_chart_partials/: chart.html
tests/config_file/: pobsd-server-address-is-incorrect.conf  pobsd-server-missing-client_id.conf  pobsd-server-missing-client_secret.conf  pobsd-server-port-is-string.conf
